<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoutingSlip"
    android:background="@color/medium_sea_green">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ROUTING SLIP"
        android:textSize="35dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/txt_routing_slip"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_routing_slip"
        android:orientation="vertical"
        android:id="@+id/ly_one_routing_slip">

        <EditText
            android:id="@+id/txt_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/to"/>

        <EditText
            android:id="@+id/txt_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:hint="@string/from"/>
        <EditText
            android:id="@+id/txt_forwarded_for_action_to"
            android:hint="@string/forwarded_for_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/date"
            android:hint="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/file_ref"
            android:hint="@string/file_ref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ly_one_routing_slip">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--
        <TextView
                    android:id="@+id/txt_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/to"/>

                <TextView
                    android:id="@+id/txt_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/from"/>
                <TextView
            android:id="@+id/txt_forwarded_for_action_to"
            android:hint="@string/forwarded_for_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/date"
                    android:hint="@string/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/file_ref"
                    android:hint="@string/file_ref"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"/>
                    -->

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_matter"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_signature"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amend"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_account"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raise_drn"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cost_file"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boc"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pretrial_discovery"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ascertain_credit"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attend_hearing_mention"/>

    </LinearLayout>
    </ScrollView>

</RelativeLayout>